PUML Preview Block add support MacOS / Linux

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -3651,7 +3651,11 @@ Needs Java and plantuml.jar installed in =~/opt=
         (write-file preview-file)
         (set-buffer image-buffer-name)
         (save-buffer)
-        (image-mode)))))
+        (image-mode))))
+  (when is-mac
+    (plantuml-preview-current-block 1))
+  (when is-linux
+    (plantuml-preview-current-block 1)))
 #+end_src
 ** Python
 *** python-mode
