--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -4279,6 +4279,37 @@ Experimental get Ready
     (nc/goto-journal-file)
     (org-roam-node-random))
 #+end_src
+** Bookmark launcher
+From : https://xenodium.com/building-your-own-bookmark-launcher/
+#+begin_src elisp
+(require 'org-element)
+(require 'seq)
+
+(defun nc-browser-bookmarks (org-file)
+  "Return all links from ORG-FILE."
+  (with-temp-buffer
+    (let (links)
+      (insert-file-contents org-file)
+      (org-mode)
+      (org-element-map (org-element-parse-buffer) 'link
+        (lambda (link)
+          (let* ((raw-link (org-element-property :raw-link link))
+                 (content (org-element-contents link))
+                 (title (substring-no-properties (or (seq-first content) raw-link))))
+            (push (concat title
+                          "\n"
+                          (propertize raw-link 'face 'whitespace-space)
+                          "\n")
+                  links)))
+        nil nil 'link)
+      (seq-sort 'string-greaterp links))))
+
+(defun nc/open-bookmark ()
+  (interactive)
+  (browse-url (seq-elt (split-string (completing-read "Open: " (nc-browser-bookmarks "~/my-bookmarks.org")) "\n") 1)))
+
+#+end_src
+
 
 * Provided modules
 
