--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -752,8 +752,20 @@ your currently entered incomplete command (a prefix) in a popup.
 See also : https://github.com/pivaldi/pimacs/tree/master/doc
 
 #+begin_src emacs-lisp
-
 (global-set-key (kbd "C-q") nil)
+
+(defvar-keymap prefix-buffer-map-c
+  :doc "Prefix map for C-q for coding"
+  "j" #'consult-lsp-symbols
+  "r" #'lsp-rename
+  "o" #'lsp-organize-imports
+  "X" #'lsp-treemacs-errors-list
+  "y" #'lsp-treemacs-call-hierarchy
+  "S" #'lsp-treemacs-symbols
+  "R" #'lsp-treemacs-references 
+  ;; "d" prefix-buffer-map-denote
+  )
+
 
 (defvar-keymap prefix-buffer-map-d
   :doc "Prefix map for C-q for dired/Denote"
@@ -767,6 +779,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
     :doc "Prefix map for C-q for Insert"
     "d" #'nc/insert-datestamp-inactive
     "D" #'nc/insert-datestamp
+    "e" #'emoji-search
     "p" #'nc/generate-password
     "t" #'tempel-insert
     "u" #'nc/uuid
@@ -838,6 +851,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
 
 
 (which-key-add-keymap-based-replacements prefix-command-q
+  "c" `("Code" . ,prefix-buffer-map-c)
   "d" `("Dired/Denote" . ,prefix-buffer-map-d)
   ;; "d d" `("Denote" . ,prefix-buffer-map-denote)
   "g" `("Goto My Files" . ,prefix-buffer-map-g)
