--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -2215,7 +2215,7 @@ will appear as projects.
           (file nc/org-projects-file)
           "* %^{ProjectName} :project:\nDEADLINE: %^t\n:PROPERTIES:\n:STARTDATE: %U\n:CATEGORY: %^{category}\n:END:\n %?")
          ("pt" "Todo" entry
-          (file nc/org-projects-file)
+          (file+headline nc/inbox-file "Inbox")
           "* TODO %?" :refile-targets ((nil :maxlevel . 1))
           :prepend t)
          ("o" "@office")
@@ -2223,7 +2223,7 @@ will appear as projects.
           (file nc/org-office-file)
           "* %^{ProjectName}:project:\nDEADLINE: %^t\n:PROPERTIES:\n:STARTDATE: %U\n:CATEGORY: %^{category}\n:END:\n %?")
          ("ot" "Todo" entry
-          (file nc/org-office-file)
+          (file+headline nc/inbox-file "Inbox")
           "* TODO %?" :refile-targets ((nil :maxlevel . 1))
           :prepend t)
          ("t" "Task Entry"        entry
@@ -3748,7 +3748,7 @@ Needs Java and plantuml.jar installed in =~/opt=
            (python-mode . dap-mode)
            (python-mode . lsp-deferred))
     :custom
-    (python-shell-interpreter "python3")
+    (python-shell-interpreter "python")
 
 
     :config
