Fix some keybinndings

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -762,12 +762,11 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "r" #'lsp-rename
   "o" #'lsp-organize-imports
   "X" #'lsp-treemacs-errors-list
-  "y" #'lsp-treemacs-call-hierarchy
+  "H" #'lsp-treemacs-call-hierarchy
   "S" #'lsp-treemacs-symbols
   "R" #'lsp-treemacs-references 
   ;; "d" prefix-buffer-map-denote
   )
-
 
 (defvar-keymap prefix-buffer-map-d
   :doc "Prefix map for C-q for dired/Denote"
@@ -806,6 +805,11 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "o" #'occur
   "d" #'dired-jump)
 
+(defvar-keymap  prefix-buffer-map-k
+  :doc "Prefix map for C-q for killing"
+  "w" #'kill-buffer-and-window
+  "f" #'delete-frame
+  )
 
 (defvar-keymap prefix-buffer-map-n
   :doc "Prefix map for C-q for notes"
@@ -814,11 +818,12 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "l" #'org-store-link
   )
 
-
 (defvar-keymap prefix-buffer-map-o
   :doc "Prefix map for C-q for open"
   "f" #'make-frame
+  "l" #'nc/open-bookmark
   "p" #'nc/treemacs-toggle
+  "." #'projectile-edit-dir-locals
   "P" #'treemacs-find-file)
 
 
@@ -862,7 +867,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "C-q" #'major-mode-hydra
   "i" prefix-buffer-map-i
   "j" prefix-buffer-map-j
-  "l" #'nc/open-bookmark
+  "k" prefix-buffer-map-k
   "o" prefix-buffer-map-o
   "s" prefix-buffer-map-s
   "t" prefix-buffer-map-t
@@ -876,6 +881,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "g" `("Goto My Files" . ,prefix-buffer-map-g)
   "i" `("Insert" . ,prefix-buffer-map-i)
   "j" `("Jump" . ,prefix-buffer-map-j)
+  "k" `("Kill" . ,prefix-buffer-map-k)
   "t" `("Toggles" . ,prefix-buffer-map-t)
   ;; "m m" `("Mark" . ,prefix-buffer-map-mark)
   ;;"c" `("Casual" . ,prefix-buffer-map-casual)
