--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -799,6 +799,9 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   ;; "d" prefix-buffer-map-ctrl-denote
   )
 
+(defvar-keymap prefix-buffer-map-ctrl-f
+  :doc "Prefix map for C-q for files"
+  "f" #'nc/consult-fd-my-projects)
 
 (defvar-keymap prefix-buffer-map-ctrl-i
   :doc "Prefix map for C-q for Insert"
@@ -857,9 +860,8 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
 (defvar-keymap prefix-buffer-map-ctrl-s
   :doc "Prefix map for C-q for Search"
   "/" #'nc/consult-line-symbol-at-point
-  "f" #'nc/consult-fd-my-projects
   "n" #'nc/search-notes
-  "r" #'nc/consult-rg-my-projects)
+  "p" #'nc/consult-rg-my-projects)
 
 
 (defvar-keymap prefix-buffer-map-ctrl-t
@@ -892,6 +894,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "/" #'nc/consult-line-symbol-at-point
   "a" #'embark-act
   "C-d" prefix-buffer-map-ctrl-d
+  "C-f" prefix-buffer-map-ctrl-f
   "C-g" prefix-buffer-map-ctrl-g
   "C-h" #'major-mode-hydra
   "C-i" prefix-buffer-map-ctrl-i
@@ -899,6 +902,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "C-k" prefix-buffer-map-ctrl-k
   "C-n" prefix-buffer-map-ctrl-n
   "C-o" prefix-buffer-map-ctrl-o
+  "C-p" #'projectile-command-map
   "C-s" prefix-buffer-map-ctrl-s
   "C-t" prefix-buffer-map-ctrl-t
   "C-w" prefix-buffer-map-ctrl-w)
@@ -907,6 +911,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
 (which-key-add-keymap-based-replacements prefix-command-q
   "C-l" `("LSP" . ,prefix-buffer-map-ctrl-l)
   "C-d" `("Dired/Denote"  . ,prefix-buffer-map-ctrl-d)
+  "C-f" `("File"  . ,prefix-buffer-map-ctrl-f)
   "C-g" `("Goto My Files" . ,prefix-buffer-map-ctrl-g)
   "C-i" `("Insert" . ,prefix-buffer-map-ctrl-i)
   "C-j" `("Jump" . ,prefix-buffer-map-ctrl-j)
