Add new emacs 29.1 rename function

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -801,7 +801,8 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
 
 (defvar-keymap prefix-buffer-map-ctrl-f
   :doc "Prefix map for C-q for files"
-  "f" #'nc/consult-fd-my-projects)
+  "f" #'nc/consult-fd-my-projects
+  "r" #'rename-visited-file)
 
 (defvar-keymap prefix-buffer-map-ctrl-i
   :doc "Prefix map for C-q for Insert"
