Add VC Browse Remote File

--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -853,6 +853,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
   "c" #'calc
   "e" #'crux-open-with
   "f" #'make-frame
+  "g" #'nc/vc-browse-remote
   "l" #'nc/open-bookmark
   "t" #'nc/treemacs-toggle)
 
@@ -4415,6 +4416,38 @@ From : https://xenodium.com/building-your-own-bookmark-launcher/
   (browse-url (seq-elt (split-string (completing-read "Open: " (nc-browser-bookmarks "~/emacs-bookmarks.org")) "\n") 1)))
 
 #+end_src
+** vc-browse-remote 
+
+From : https://www.rahuljuliato.com/posts/vc-git-functions
+This function opens the repository's remote URL in the browser.
+If CURRENT-LINE is non-nil, it points to the current branch, file, and line. Otherwise, it opens the repository's main page.
+
+#+begin_src emacs-lisp
+
+(defun nc/vc-browse-remote (&optional current-line)
+  "Open the repository's remote URL in the browser.
+If CURRENT-LINE is non-nil, point to the current branch, file, and line.
+Otherwise, open the repository's main page."
+  (interactive "P")
+  (let* ((remote-url (string-trim (vc-git--run-command-string nil "config" "--get" "remote.origin.url")))
+		 (branch (string-trim (vc-git--run-command-string nil "rev-parse" "--abbrev-ref" "HEAD")))
+		 (file (string-trim (file-relative-name (buffer-file-name) (vc-root-dir))))
+		 (line (line-number-at-pos)))
+	(message "Opening remote on browser: %s" remote-url)
+	(if (and remote-url (string-match "\\(?:git@\\|https://\\)\\([^:/]+\\)[:/]\\(.+?\\)\\(?:\\.git\\)?$" remote-url))
+		(let ((host (match-string 1 remote-url))
+			  (path (match-string 2 remote-url)))
+		  ;; Convert SSH URLs to HTTPS (e.g., git@github.com:user/repo.git -> https://github.com/user/repo)
+		  (when (string-prefix-p "git@" host)
+			(setq host (replace-regexp-in-string "^git@" "" host)))
+		  ;; Construct the appropriate URL based on CURRENT-LINE
+		  (browse-url
+		   (if current-line
+			   (format "https://%s/%s/blob/%s/%s#L%d" host path branch file line)
+			 (format "https://%s/%s" host path))))
+	  (message "Could not determine repository URL"))))
+#+end_src
+
 
 
 * Provided modules
