--- a/.emacs.d/Readme.org
+++ b/.emacs.d/Readme.org
@@ -829,6 +829,7 @@ See also : https://github.com/pivaldi/pimacs/tree/master/doc
 (defvar-keymap prefix-buffer-map-ctrl-j
   :doc "Prefix map for C-q for jump"
   ":" #'avy-goto-char-timer
+  "h" #'consult-org-agenda
   "i" #'consult-imenu
   "o" #'occur
   "d" #'dired-jump
